[package]
name = "sol-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0.86" }
solana-sdk = "2.0.3"
tokio = { version = "1.39.1", features = ["full"] }
mio = "=1.0.1"
colored = "2.1.0"
solana-client = "2.0.3"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
solana-program = "2.0.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
